# cppe

./: .clang-format  .gitignore  .gitmodules  .travis.yaml  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  bm.py  build_core.py  fmm.py  fmul.py  pyproject.toml  run_tests.sh  setup.cfg  setup.py  setup_environment.sh  test_cg.py  timings.py
.github/: dependabot.yml  environment.yml
.github/workflows/: ci.yml  cmake.yml  publish.yml  publish_binary.yml
benchmarks/: .gitignore  README.md  conftest.py  plot_benchmarks.py  synthetic_systems.py  test_bmatrix_apply.py  test_induced_moments.py  test_multipole_expansion.py  test_multipole_fields.py  test_nuclear_fields.py  test_potfile_reader.py  test_state_cycle.py  test_synthetic_large.py  utils.py
cmake/: SetupCompiler.cmake
cmake/compiler_flags/: CXXFlags.cmake  Clang.CXX.cmake  GNU.CXX.cmake  Intel.CXX.cmake  MSVC.CXX.cmake
cppe/: CMakeLists.txt  __init__.py  export_cppe.cc  interface.h  libcppe.cc  libcppe.hh  metadata.cc  metadata.hh  pe_state_handler.cc  pe_state_handler.hh
cppe/cmake/: cppeConfig.cmake.in
cppe/core/: CMakeLists.txt  bmatrix.cc  bmatrix.hh  cppe_state.cc  cppe_state.hh  electric_fields.cc  electric_fields.hh  math.cc  math.hh  molecule.hh  multipole.hh  multipole_expansion.cc  multipole_expansion.hh  pe_energies.cc  pe_energies.hh  pe_options.hh  pot_manipulation.cc  pot_manipulation.hh  potential.cc  potential.hh  potfile_reader.cc  potfile_reader.hh  tensors.hh
cppe/core/fmm/: CMakeLists.txt  calculate.cc  calculate.hh  field_m0.cc  field_m0.hh  field_m1.cc  field_m1.hh  field_m2.cc  field_m2.hh  operators.cc  operators.h  tree.cc  tree.hh  utils.cc  utils.hh
cppe/core/tensors/: CMakeLists.txt  tensors_autogen.cc  tensors_autogen.hh  tensors_recursive.hh
cppe/pe_interface/: CMakeLists.txt  pe_interface.F90
cppe/pelib_interface/: CMakeLists.txt
cppe/pycppe/: CMakeLists.txt  export_core.cc  export_fields.cc  export_math.cc  export_molecule.cc  export_multipole.cc  export_options.cc  export_state.cc  export_utils.cc  pybind_arma.h  pycppe.cc
cppe/python_iface/: CMakeLists.txt  __init__.py  export_cppe.cc  export_fields.cc  export_fmm.cc  export_math.cc  export_molecule.cc  export_multipole.cc  export_options.cc  export_potential.cc  export_state.cc  export_tensors.cc  export_utils.cc
cppe/utils/: CMakeLists.txt  pot_manipulation.cc  pot_manipulation.hh  potfile_reader.cc  potfile_reader.hh  string_utils.cc  string_utils.hh
doc/doxygen_xml/: _r_e_a_d_m_e_8md.xml  classlibcppe_1_1_c_p_p_e.xml  classlibcppe_1_1_cppe_state.xml  classlibcppe_1_1_induced_moments.xml  classlibcppe_1_1_multipole.xml  classlibcppe_1_1_multipole_expansion.xml  classlibcppe_1_1_multipole_fields.xml  classlibcppe_1_1_nuclear_fields.xml  classlibcppe_1_1_polarizability.xml  classlibcppe_1_1_pot_manipulator.xml  classlibcppe_1_1_potential.xml  classlibcppe_1_1_potfile_reader.xml  cppe__state_8cc.xml  cppe__state_8hh.xml  dir_10e4f7b4cfe79cadc3b1bd1deca3ddf7.xml  dir_34ef9b77aeabc5ec58939d80c2e43bc3.xml  dir_4ef915e641514ebc91bdfc914537ff46.xml  dir_53f1138f3f5c4b11e9518e7b6d18a2eb.xml  dir_7a6499598ddcfcabe96e224cb4a6d834.xml  dir_eb05382a6b76d2ee1afeadfd5a23001f.xml  dir_f98a5f65b8c4f880c583640445bd1dcf.xml  electric__fields_8cc.xml  electric__fields_8hh.xml  export__fields_8cc.xml  export__math_8cc.xml  export__molecule_8cc.xml  export__multipole_8cc.xml  export__options_8cc.xml  export__state_8cc.xml  export__utils_8cc.xml  index.xml  interface_8h.xml  libcppe_8cc.xml  libcppe_8hh.xml  math_8cc.xml  math_8hh.xml  md___users_maxscheurer__projects_cppe__r_e_a_d_m_e.xml  molecule_8hh.xml  multipole_8cc.xml  multipole_8hh.xml  (+25 more)
doc/source/: conf.py  cpp_api.rst  index.rst
docs/: conf.py  cppecore.md  index.md  license.md  publications.md
examples/: test.py
pycppe/core/: .gitignore
scripts/: common.py  run-clang-format.py  setup_environment.sh
scripts/gen_fmm/: gen_fmm.py
scripts/gen_tensors/: gen_tensors.py
src/: CMakeLists.txt  interface.h  libcppe.cc  libcppe.hh  metadata.cc
src/core/: CMakeLists.txt  bmatrix.cc  bmatrix.hh  cppe_state.cc  cppe_state.hh  electric_fields.cc  electric_fields.hh  math.cc  molecule.hh  multipole_expansion.cc  multipole_expansion.hh  pe_options.hh  pot_manipulation.cc  pot_manipulation.hh  potential.hh  potfile_reader.cc  potfile_reader.hh
src/core/fmm/: CMakeLists.txt  calculate.cc  calculate.hh  field_m2.cc  field_m2.hh  tree.cc  utils.cc
src/core/tensors/: CMakeLists.txt  tensors_recursive.cc
src/cppe/: __init__.py  backend.py  cpp.py  fields.py  multipole.py  multipole_fields.py  potfile.py  solver.py  state.py
src/pelib_interface/: pe_interface.F90
src/python_iface/: CMakeLists.txt  export_cppe.cc  export_fields.cc  export_fmm.cc  export_math.cc  export_multipole.cc  export_potential.cc  export_state.cc  export_utils.cc
src/utils/: CMakeLists.txt  string_utils.cc
tests/: cache.py  conftest.py  dump_pyscf.py  misc.py  nilered.hdf5  pna.hdf5  ref_fmm_errors.csv  symmetry_helper.py  test_backend.py  test_bmatrix_python.py  test_fields.py  test_fmm.py  test_functionality.py  test_gradients.py  test_induced_moments_python.py  test_math.py  test_multipole_expansion_python.py  test_multipole_fields_python.py  test_nuclear_fields_python.py  test_options.py  test_potfile_reader_python.py  test_solver.py  test_state_python.py
tests/potfiles/: fmuls_loprop_solvated_20.txt  loprop_solvated_20.pot  make_isopol.py  pna_6w_isopol.pot
tests/tensors/: functions.py  symmetry.py  tensors.py
